test/commands/scan/scripted/out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 1 resource against 1 policy ) ...
- test / foo-bar-4 / (unknown) PASSED
Done
