test/commands/scan/scripted/policy.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: test
spec:
  rules:
    - name: foo-bar-4
      assert:
        all:
        - check:
            foo:
              (bar > `3`): true
              (!baz): false
        - check:
            foo:
              (bar + bat): 10
